--- a/mainPage.html
+++ b/mainPage.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>asa</title>
 </head>
 <body>
-    
+    <h1>
+        hah
+    </h1>
 </body>
 </html>
