--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
-    <script src ="script.js" defer></script>
+    <script src ="../js/script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -20,8 +20,8 @@
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
     </div>
-    <div class="winning-message" id="winningMessage">
-        <div data-winning-message-text></div>
+    <div class="winning-message show" id="winningMessage">
+        <div data-winning-message-text>X Wins!</div>
         <button id="restartButton">Restart</button>
     </div>
 </body>
