Add index file with the base game and first look, Reorganise folders, files and directories, Nuke old unusable files

--- a/html/index.html
+++ b/html/index.html
@@ -1,28 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src ="../js/script.js" defer></script>
-    <title>Document</title>
+	<title>Gamers' Headquarter</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Favicon -->   
+	<link href="../img/favicon.png" rel="shortcut icon"/>
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="../css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="../css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="../css/style.css"/>
+	<link rel="stylesheet" href="../css/style2.css"/>
 </head>
-<body>
-    <div class="board" id ="board">
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
+
+<body class="background2">
+
+	<!-- Header section -->
+	<header class="header-section">
+		<div>
+				<nav class="main-menu">
+					<ul>
+						<div class="topnav" id="myTopnav">
+								<a href="index.html">
+									<img class = "picz_logo" src="../img/logo.png" align = "top">
+								</a>
+
+								<a href="../php/login.php"><button class="mt medium diagonal">Login</button></a>
+								<a href="../php/reglog.php"><button class="mt medium diagonal">Sign up</button></a>
+								
+								<a href="javascript:void(0);" class="icon" onclick="navbar()">
+									<i class="fa fa-bars"></i>
+								</a>
+						</div>
+					</ul>
+				</nav>
+		</div>
+	</header>
+	
+	<div class="background2">
+		<img src="../img/WellcomeBotTR.png"/>
+	</div>
+	<div>
+		<img class="miniBots container2" src="../img/Mini_bots.png">
+	</div>
+	<div class="container2">
+        <canvas id="cvs" width="450" height="450"></canvas>
+        <div class="options">
+			<img class= "gameTitle"src="../img/TicTacToe.png">
+            
+            <h2>Play Versus</h2>
+            <div class="computer">COMPUTER</div>
+            <div class="friend">FRIEND</div>
+
+            <h2>Symbol</h2>
+            <div class="x">X</div>
+            <div class="o">O</div>
+
+            <div class="play">PLAY</div>
+        </div>
+        <div class="gameover hide"></div>
     </div>
-    <div class="winning-message" id="winningMessage">
-        <div data-winning-message-text></div>
-        <button id="restartButton">Restart</button>
-    </div>
-</body>
+	
+	<!-- GHQ Footer -->
+	<div class="limg1"></div>
+	<section class="footer-top-section" align="center">
+		<img src="../img/footer-logo.png" alt="" >
+		<p><i>" Community, friends & love make the gamer a creator. "<i></p>
+			<footer class="footer-top-section">
+		<div class="container">
+			<div class="footer-left-pic">
+				<img src="../img/footer-top-bg.png" alt="">
+			</div>
+			<div class="footer-right-pic">
+				<img src="../img/footer-top-bg2.png" alt="">
+			</div>
+			<div class="header_social">
+				<ul>
+					<li><a href="https://www.twitch.tv/g_drianovski"><i class="fa fa-twitch" aria-hidden="true"></i></a></li>
+					<li><a href="https://www.instagram.com/g_drianovski/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+					<li><a href="https://twitter.com/drianovski"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
+	</section>
+	
+		<!-- GHQ Footer -->
+		<script src="../js/options.js"></script>
+		<script src="../js/game.js"></script>
+		<script src="../js/javascript.js"></script>
+    </body>
 </html>
