Add new look for the index and optimise parts of the code

--- a/html/index.html
+++ b/html/index.html
@@ -38,32 +38,36 @@
 		</div>
 	</header>
 	
-	<div class="background2">
+	<div class="background3">
 		<img src="../img/WellcomeBotTR.png"/>
-	</div>
-	<div>
-		<img class="miniBots container2" src="../img/Mini_bots.png">
-	</div>
-	<div class="container2">
-        <canvas id="cvs" width="450" height="450"></canvas>
-        <div class="options">
-			<img class= "gameTitle"src="../img/TicTacToe.png">
-            
-            <h2>Play Versus</h2>
-            <div class="computer">COMPUTER</div>
-            <div class="friend">FRIEND</div>
+		<div>
+			<img class="miniBots container2" src="../img/Mini_bots.png">
+		</div>
+		<div class="container2">
+			<canvas id="cvs" width="450" height="450"></canvas>
+			<div class="options">
+				<img class= "gameTitle"src="../img/TicTacToe.png">
+				
+				<h2>Play Versus</h2>
+				<div class="computer">COMPUTER</div>
+				<div class="friend">FRIEND</div>
 
-            <h2>Symbol</h2>
-            <div class="x">X</div>
-            <div class="o">O</div>
+				<h2>Symbol</h2>
+				<div class="x">X</div>
+				<div class="o">O</div>
 
-            <div class="play">PLAY</div>
-        </div>
-        <div class="gameover hide"></div>
-    </div>
+				<div class="play">PLAY</div>
+			</div>
+			<div class="gameover hide"></div>
+		</div>
+		<div class="center"><img src="../img/typhon-logo.png"></div>
+	</div>
+	<div class="background2">
+		<img src="../img/bottomBorder.png"/>
+	</div>
 	
 	<!-- GHQ Footer -->
-	<div class="limg1"></div>
+	<div class="background"></div>
 	<section class="footer-top-section" align="center">
 		<img src="../img/footer-logo.png" alt="" >
 		<p><i>" Community, friends & love make the gamer a creator. "<i></p>
