--- a/html/index.html
+++ b/html/index.html
@@ -95,5 +95,6 @@
 		<script src="../js/options.js"></script>
 		<script src="../js/game.js"></script>
 		<script src="../js/javascript.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </body>
 </html>
